--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext {
+        nav_version = '2.6.0'
+        retrofit_version = "2.9.0"
+        moshi_version = '1.15.0'
+        coil_version = '2.4.0'
+    }
+    dependencies {
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
+    }
+
+}
+
 plugins {
 id 'com.android.application' version '8.1.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
