--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
     implementation 'androidx.fragment:fragment-ktx:1.6.0'
+    implementation 'at.blogc:expandabletextview:1.0.5'
+
+
 
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
